# mivi-image-consumer

./: .gitignore  Cargo.toml  build.rs  main_2.rs
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  shared_memory.rs
src/backend/: connection_manager.rs  frame_processor.rs  mod.rs  shared_memory.rs  types.rs
src/frontend/: app.rs  image_converter.rs  mod.rs  slint_bridge.rs  ui_state.rs
src/ui/: animations.rs  main_window.slint  mod.rs  theme.rs  widgets.rs
src/ui/panels/: bottom_panel.rs  central_panel.rs  info_panel.rs  mod.rs  tools_panel.rs  top_panel.rs
src/ui/tools/: annotate.rs  measure.rs  mod.rs  roi.rs  zoom_pan.rs
